--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,9 @@
   font-display: swap;
 }
 
+.visually-hidden{
+  display: none;
+}
 
 body {
   font-family: "PT Sans", sans-serif;
@@ -34,10 +37,15 @@ body {
 .navigation-link {
   text-decoration: none;
   color: #000;
+  display: flex;
 }
 
 .navigation-item{
   list-style-type: none;
+  display: flex;
+  align-items: center;
+  margin-left: 16px;
+  margin-right: 16px;
 }
 
 .btn{
@@ -57,6 +65,10 @@ body {
   background-position: center;;
   background-repeat: no-repeat;
   text-align: center;
+  height: 485px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .favorits-count{
   background-color: #7DB54F;
@@ -64,16 +76,30 @@ body {
   font-size: 10px;
   line-height: 10px;
   color: #fff;
+  position: absolute;
+  top: 15%;
+  right: 5%;
+  padding: 5px;
+  border-radius: 50%;
 }
 
 .favorits{
   background-image: url("../images/heart.svg");
   background-repeat: no-repeat;
+  background-position: center;
+  display: block;
+  position: relative;
+  width: 44px;
+  height: 100%;
 }
 
 .btn-search{
   background-image: url("../images/search.svg");
   background-repeat: no-repeat;
+  background-position: center;
+  display: block;
+  width: 44px;
+  height: 100%;
 }
 
 .call_to_action, .service, .advantages, .search{
@@ -124,12 +150,21 @@ body {
 .subscribe{
   background-image: url("../images/background_subscribe.jpeg");
   background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 414px;
   color: #fff;
   text-align: center;
 }
 
 .service-item{
   list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .service-item:nth-child(odd){
@@ -166,6 +201,8 @@ body {
 
 .social-item{
   list-style-type: none;
+  width: 100%;
+  height: 100%;
 }
 
 .social-vk{
@@ -182,12 +219,19 @@ body {
 
 .social-link{
   background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 .filter{
   background-image: url("../images/background_filter.jpeg");
   background-color: #756157;
+  padding-left: 70px;
+  padding-right: 70px;
   background-repeat: no-repeat;
+  height: 412px;
   color: #fff;
 }
 
@@ -283,6 +327,7 @@ body {
 
 .without-bg{
   background-image: none;
+  color: black;
 }
 .filter-group{
   border: none;
@@ -296,4 +341,100 @@ body {
 }
 .catalo-card{
   list-style-type: none;
+}
+
+html{
+  background-color: #F2F2F2;
+}
+body{
+  max-width: 1200px;
+  margin: auto;
+  box-shadow: 0px 0px 15px 0px #00000033;
+}
+.navigation{
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
+}
+
+.main-header{
+  display: flex;
+  margin-left: 70px;
+  margin-right: 70px;
+}
+
+
+.service-list{
+  display: flex;
+  padding: 0;
+}
+.service-item{
+  width: 400px;
+  height: 385px;
+}
+
+
+.main-footer{
+  display: flex;
+  align-items: center;
+  width: 1060px;
+  height: 120px;
+  margin: auto;
+  justify-content: space-between;
+}
+
+.advantages-list{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
+.advantages-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 400px;
+  height: 385px;
+}
+.advantages-item{
+  display: flex;
+}
+.advantages-reasons{
+  height: 282px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.call_to_action{
+  height: 246px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.search{
+  height: 406px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.filter-form{
+  display: flex;
+  justify-content: space-between;
+}
+
+.filter-group{
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+}
+
+.catalog{
+  padding-left: 70px;
+  padding-right: 70px;
+}
+.catalog-header{
+  display: flex;
 }
