Сетки страниц на флексах

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -438,3 +438,12 @@ body{
 .catalog-header{
   display: flex;
 }
+
+.sort-select{
+  margin-left: auto;
+  margin-right: 70px;
+}
+
+.pagination{
+  display: flex;
+}
