--- a/styles/styles.css
+++ b/styles/styles.css
@@ -344,6 +344,8 @@ body {
   width: 340px;
   box-sizing: border-box;
   padding: 20px;
+  border: 1px solid #E6E6E6;
+  border-radius: 4px;
 }
 .catalo-list{
   display: flex;
