--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,15 +14,22 @@
   font-display: swap;
 }
 
-.visually-hidden{
-  display: none;
+html{
+  background-color: #F2F2F2;
 }
 
-body {
+body{
   font-family: "PT Sans", sans-serif;
   background-color: #fff;
   color: #000;
   font-size: 18px;
+  max-width: 1200px;
+  margin: auto;
+  box-shadow: 0px 0px 15px 0px #00000033;
+}
+
+.visually-hidden{
+  display: none;
 }
 
 .navigation{
@@ -44,8 +51,6 @@ body {
   list-style-type: none;
   display: flex;
   align-items: center;
-  margin-left: 16px;
-  margin-right: 16px;
 }
 
 .btn{
@@ -57,6 +62,11 @@ body {
   color: #fff;
   border: none;
   text-decoration: none;
+  border-radius: 4px;
+}
+
+.btn:hover{
+  cursor: pointer;
 }
 
 .introduction{
@@ -65,11 +75,14 @@ body {
   background-position: center;;
   background-repeat: no-repeat;
   text-align: center;
-  height: 485px;
+  padding: 51px 371px 82px 371px;
+  background-size: cover;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
+
 .favorits-count{
   background-color: #7DB54F;
   text-align: center;
@@ -112,14 +125,15 @@ body {
   font-size: 30px;
   line-height: 36px;
   text-align: center;
+  margin: 0;
 }
 
 .introduction-reason{
   font-size: 22px;
   line-height: 26px;
   color: #333333;
+  margin: 0;
 }
-
 
 .advantages-item{
   background-color: #83B3D31F;
@@ -140,11 +154,23 @@ body {
   font-weight: 700;
   line-height: 28px;
   text-transform: uppercase;
+  margin: 0;
+}
+
+.advantages-title::after{
+  content: "";
+  display: block;
+  margin: auto;
+  height: 2px;
+  width: 60px;
+  background: #0000004D;
+  margin-top: 30px;
 }
 
 .advantages-description{
   font-size: 18px;
   line-height: 21px;
+  margin: 0;
 }
 
 .subscribe{
@@ -155,9 +181,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 414px;
   color: #fff;
   text-align: center;
+  gap: 20px;
+  padding: 96px 258px 104px 258px;
 }
 
 .service-item{
@@ -176,18 +203,22 @@ body {
   font-size: 24px;
   font-weight: 700;
   line-height: 28px;
+  margin: 0;
 }
+
 .service-description{
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
   color: #333333;
+  margin: 0;
 }
 
 .search-description{
   font-size: 22px;
   font-weight: 400;
   line-height: 26px;
+  margin: 0;
 }
 
 .footer-phone{
@@ -197,6 +228,11 @@ body {
   text-align: center;
   text-decoration: none;
   color: #000;
+}
+
+.footer-phone-container{
+  display: flex;
+  flex-direction: column;
 }
 
 .social-item{
@@ -245,7 +281,6 @@ body {
 .breadcrumbs-link{
   text-decoration: none;
   color: #fff;
-
   font-size: 16px;
   font-weight: 400;
   line-height: 21px;
@@ -271,18 +306,33 @@ body {
 .btn-blue{
   background-color: #82B3D3;
 }
+
 .btn-transparent{
   background-color: transparent;
 }
+
 .btn-brown{
   background-color: #756157;
 }
+
 .btn-green{
   background-color: #7DB54F;
 }
+
 .btn-light{
   background-color: #F2F2F2;
   color: #000;
+}
+
+.btn-sm{
+  padding: 8px 34px 8px 32px;
+}
+
+.btn-lg{
+  padding: 8px 50px 8px 50px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
 }
 
 .search-count{
@@ -292,15 +342,18 @@ body {
   text-align: left;
   text-transform: uppercase;
 }
+
 .sort-select{
   color: #333333;
 }
+
 .catalo-card-title{
   font-size: 24px;
   font-weight: 700;
   line-height: 28px;
   text-align: left;
 }
+
 .catalo-card-apartments-type{
   font-size: 18px;
   font-weight: 400;
@@ -329,16 +382,20 @@ body {
   background-image: none;
   color: black;
 }
+
 .filter-group{
   border: none;
 }
+
 .pagination-link{
   font-size: 16px;
   font-weight: 700;
 }
+
 .pagination-item{
   list-style-type: none;
 }
+
 .catalo-card{
   list-style-type: none;
   width: 340px;
@@ -347,20 +404,14 @@ body {
   border: 1px solid #E6E6E6;
   border-radius: 4px;
 }
+
 .catalo-list{
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   padding: 0;
 }
-html{
-  background-color: #F2F2F2;
-}
-body{
-  max-width: 1200px;
-  margin: auto;
-  box-shadow: 0px 0px 15px 0px #00000033;
-}
+
 .navigation{
   display: flex;
   justify-content: space-between;
@@ -373,23 +424,19 @@ body{
   margin-right: 70px;
 }
 
-
 .service-list{
   display: flex;
   flex-wrap: wrap;
   padding: 0;
+  margin: 0;
 }
 
-/* не понятно как лучше сделать,
-устанавливая отступы и ширину,
-кажется что внутренние отступы по горизонтали лишние */
 .service-item{
   width: 400px;
   padding: 81px 85px;;
   box-sizing: border-box;
-  /* height: 385px; */
+  gap: 20px;
 }
-
 
 .main-footer{
   display: flex;
@@ -404,36 +451,52 @@ body{
   display: flex;
   flex-wrap: wrap;
   padding: 0;
+  margin: 0;
 }
+
 .advantages-content{
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 400px;
-  height: 385px;
+  gap: 30px;
+  min-height: 385px;
 }
+
 .advantages-item{
   display: flex;
 }
+
 .advantages-reasons{
-  height: 282px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 25px;
+  padding-top: 69px;
+  padding-bottom: 69px;
 }
+
 .call_to_action{
-  height: 246px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-top: 64px;
+  padding-bottom: 64px;
+  gap: 20px;
 }
+
 .search{
-  height: 406px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  gap: 20px;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+.search > .btn{
+  margin-top: 34px;
 }
 
 .filter-form{
@@ -452,6 +515,7 @@ body{
   padding-left: 70px;
   padding-right: 70px;
 }
+
 .catalog-header{
   display: flex;
 }
@@ -463,4 +527,76 @@ body{
 
 .pagination{
   display: flex;
+}
+
+.navigation-list{
+  padding: 0;
+  margin: 0;
+}
+
+.links{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+  margin-left: 28px;
+}
+
+.links .navigation-link{
+  height: 100%;
+  align-items: center;
+}
+
+.action-list{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.action-list .btn{
+  margin-left: 20px;
+}
+
+.navigation-link.active-link{
+  box-sizing: border-box;
+  border-bottom: 2px solid #756257;
+}
+
+.logo-img{
+  margin-bottom: -12px;
+}
+
+.call_to_action-description{
+  margin: 0;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+}
+
+.subscribe-description{
+  margin: 0;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 26px;
+}
+
+.subscribe-email-form{
+  margin-top: 34px;
+  display: flex;
+  width: 100%;
+}
+
+.subscribe-email{
+  flex-grow: 1;
+  border: none;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  padding-left: 20px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.btn-send-email{
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
 }
