Сетки страниц на флексах, исправил переполнения

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -352,6 +352,7 @@ body{
   font-weight: 700;
   line-height: 28px;
   text-align: left;
+  margin: 0;
 }
 
 .catalo-card-apartments-type{
@@ -376,6 +377,10 @@ body{
   line-height: 20px;
   text-align: center;
   background-color: #F2F2F2;
+  color: #333333;
+  text-transform: uppercase;
+  padding: 9px 0px 8px 0px;
+  border-radius: 4px;
 }
 
 .without-bg{
@@ -390,6 +395,14 @@ body{
 .pagination-link{
   font-size: 16px;
   font-weight: 700;
+  min-width: 60px;
+  min-height: 60px;
+  display: block;
+  align-content: center;
+  text-align: center;
+  padding-right: 10px;
+  padding-left: 10px;
+  box-sizing: border-box;
 }
 
 .pagination-item{
@@ -397,12 +410,15 @@ body{
 }
 
 .catalo-card{
+  display: flex;
+  flex-direction: column;
   list-style-type: none;
   width: 340px;
   box-sizing: border-box;
   padding: 20px;
   border: 1px solid #E6E6E6;
   border-radius: 4px;
+  gap: 16px;
 }
 
 .catalo-list{
@@ -410,6 +426,10 @@ body{
   flex-wrap: wrap;
   gap: 20px;
   padding: 0;
+  border-bottom: 1px solid #E5E5E5;
+  padding-bottom: 40px;
+  margin: 0;
+
 }
 
 .navigation{
@@ -514,6 +534,7 @@ body{
 .catalog{
   padding-left: 70px;
   padding-right: 70px;
+  padding-bottom: 60px;
 }
 
 .catalog-header{
@@ -527,6 +548,10 @@ body{
 
 .pagination{
   display: flex;
+  padding: 0;
+  gap: 8px;
+  margin: 40px 0 0;
+  flex-wrap: wrap;
 }
 
 .navigation-list{
@@ -556,7 +581,6 @@ body{
 }
 
 .navigation-link.active-link{
-  box-sizing: border-box;
   border-bottom: 2px solid #756257;
 }
 
@@ -593,10 +617,22 @@ body{
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  background-color: #F2F2F2;
   color: rgba(0, 0, 0, 0.6);
 }
 
 .btn-send-email{
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
+}
+
+.catalo-card-description{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 16px;
+  column-gap: 20px;
+}
+.catalo-card-description > .btn{
+  padding-left: 0;
+  padding-right: 0;
 }
