--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,7 @@ body{
   font-size: 18px;
   max-width: 1200px;
   margin: auto;
-  box-shadow: 0px 0px 15px 0px #00000033;
+  box-shadow: 0 0 15px 0 #00000033;
 }
 
 .visually-hidden {
@@ -374,7 +374,6 @@ body{
 
 }
 .control{
-  font-family: PT Sans;
   font-weight: 400;
   font-size: 18px;
   line-height: 23px;
@@ -504,7 +503,7 @@ body{
   background-color: #F2F2F2;
   color: #333333;
   text-transform: uppercase;
-  padding: 9px 0px 8px 0px;
+  padding: 9px 0 8px 0;
   border-radius: 4px;
 }
 .catalo-card-image{
@@ -558,7 +557,7 @@ body{
 }
 
 .range-min{
-  left: 0%;
+  left: 0;
   transform: translateY(-50%);
 }
 
@@ -865,7 +864,7 @@ body{
   height: 72px;
   background-repeat: no-repeat;
   background-position: center;
-  ackground-size: contain;
+  background-size: contain;
   background-image: url("../images/house.svg");
 }
 
@@ -875,7 +874,7 @@ body{
   height: 72px;
   background-repeat: no-repeat;
   background-position: center;
-  ackground-size: contain;
+  background-size: contain;
   background-image: url("../images/food.svg");
 }
 .service-souvenirs::before{
@@ -947,7 +946,7 @@ body{
 .modal{
   position: relative;
   background-color: #FFFFFF;
-  box-shadow: 0px 25px 50px 0px #00000026;
+  box-shadow: 0 25px 50px 0 #00000026;
   padding: 64px 70px;
   border-radius: 30px;
   min-width: 717px;
@@ -955,7 +954,6 @@ body{
   box-sizing: border-box;
 }
 .modal-title{
-  font-family: PT Sans;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
