--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,14 +40,14 @@ body{
 }
 
 .navigation{
+  display: grid;
+  grid-template-columns: 1fr max-content;
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
-
-  display: flex;
   justify-content: space-between;
   flex-grow: 1;
   column-gap: 30px;
@@ -58,6 +58,7 @@ body{
   color: #000;
   display: flex;
   cursor: pointer;
+  position: relative;
 }
 
 .navigation-item{
@@ -115,7 +116,7 @@ body{
   line-height: 10px;
   color: #fff;
   position: absolute;
-  top: 15%;
+  top: 5%;
   right: 5%;
   padding: 5px;
   border-radius: 50%;
@@ -128,7 +129,7 @@ body{
   display: block;
   position: relative;
   width: 44px;
-  height: 100%;
+  height: 44px;
 }
 
 .btn-search{
@@ -137,8 +138,7 @@ body{
   background-position: center;
   display: block;
   width: 44px;
-  height: 100%;
-  min-height: 44px;
+  height: 44px;
 }
 
 .call_to_action, .service, .advantages, .search{
@@ -636,7 +636,7 @@ body{
 .advantages-content{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   width: 400px;
   gap: 30px;
   min-height: 385px;
@@ -793,9 +793,15 @@ body{
   max-width: 160px;
 }
 
-.navigation-link.active-link{
-  border-bottom: 2px solid #756257;
-  z-index: 1;
+.navigation-link.active-link:after{
+  content: "";
+  display: block;
+  position: absolute;
+  background-color: #756257;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .logo-img{
@@ -928,7 +934,7 @@ body{
   fill: #7561574D;
 }
 
-#open-modal:checked + .modal-overlay{
+.modal-overlay:target {
   visibility: visible;
 }
 
@@ -1178,17 +1184,22 @@ body{
 
 .modal-child-info{
   display: flex;
-  position: relative;
-  align-items: center;
-  margin-right: auto;
-  margin-left: 10px;
   cursor: pointer;
   background: none;
   border: none;
   padding: 0;
 }
 
-.modal-child-info:hover > .modal-child-info-data{
+.modal-child-info-wrapper{
+  position: relative;
+  display: flex;
+  /*align-items: center;*/
+  /*align-items: center;*/
+  margin-right: auto;
+  margin-left: 10px;
+}
+
+.modal-child-info:hover + .modal-child-info-data{
   display: block;
 }
 
