--- a/styles/styles.css
+++ b/styles/styles.css
@@ -225,7 +225,7 @@ body{
   list-style-type: none;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
 }
 
 .service-item:nth-child(odd){
