--- a/styles/styles.css
+++ b/styles/styles.css
@@ -633,6 +633,10 @@ body{
   margin-top: 21px;
 }
 
+.true-city > .advantages-content, .bridge > .advantages-content{
+  padding-top: 100px;
+}
+
 .advantages-content{
   display: flex;
   flex-direction: column;
@@ -640,7 +644,7 @@ body{
   width: 400px;
   gap: 30px;
   min-height: 385px;
-  padding-top: 100px;
+  padding-top: 112px;
   padding-bottom: 100px;
   box-sizing: border-box;
 }
@@ -733,6 +737,7 @@ body{
 .btn-visible-type-selected, .btn-visible-type:active, .btn-visible-type:hover{
   border: 2px solid #000000;
 }
+
 .breadcrumbs{
   display: flex;
   flex-wrap: wrap;
@@ -778,6 +783,8 @@ body{
 .links .navigation-link{
   height: 100%;
   align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .action-list{
@@ -1203,7 +1210,7 @@ body{
   display: block;
 }
 
-.modal-child-info:focus > .modal-child-info-data{
+.modal-child-info:focus + .modal-child-info-data{
   display: block;
 }
 
@@ -1301,6 +1308,7 @@ body{
   display: block;
   position: relative;
   width: 20px;
+  min-width: 20px;
   height: 20px;
   background: #FFFFFF;
   border-radius: 4px;
@@ -1323,6 +1331,7 @@ body{
   display: block;
   position: relative;
   width: 20px;
+  min-width: 20px;
   height: 20px;
   background: #FFFFFF;
   border-radius: 50%;
