--- a/styles/styles.css
+++ b/styles/styles.css
@@ -208,7 +208,7 @@ body{
 }
 
 .subscribe{
-  background-image: url("../images/background_subscribe.jpeg");
+  background-image: url("../images/subscribe-form-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -597,8 +597,8 @@ body{
 
 .main-header{
   display: flex;
-  margin-left: 70px;
-  margin-right: 70px;
+  padding-left: 70px;
+  padding-right: 70px;
 }
 
 .service-list{
@@ -619,10 +619,8 @@ body{
   display: flex;
   align-items: center;
   width: 1060px;
-  margin: auto;
   justify-content: space-between;
-  padding-top: 40px;
-  padding-bottom: 30px;
+  padding: 40px 70px 30px;
 }
 
 .advantages-list{
