Фикс для автоматической проверки

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -184,6 +184,10 @@ body{
   background: #FFFFFF4D;
 }
 
+.advantages{
+  margin-top: -1px;
+}
+
 .advantages-title{
   font-family: PT Sans;
   font-weight: 700;
