--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,6 +47,7 @@ body{
   line-height: 24px;
   text-align: left;
   text-underline-position: from-font;
+  -webkit-text-decoration-skip-ink: none;
   text-decoration-skip-ink: none;
   justify-content: space-between;
   flex-grow: 1;
@@ -110,7 +111,7 @@ body{
   background-image: url("../images/divider.svg");
 }
 
-.favorits-count{
+.favorites-count{
   background-color: #7DB54F;
   text-align: center;
   font-size: 10px;
@@ -123,7 +124,7 @@ body{
   border-radius: 50%;
 }
 
-.favorits{
+.favorites{
   background-image: url("../images/heart.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -223,6 +224,7 @@ body{
 
 .subscribe{
   background-image: url("../images/subscribe-form-background.jpg");
+  background-color: #83B3D333;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -247,7 +249,7 @@ body{
 }
 
 .service-item:nth-child(odd){
-    background-color: #83B3D31F;
+  background-color: #83B3D31F;
 }
 
 .service-title{
@@ -478,6 +480,7 @@ body{
   color: #333333;
   padding-left: 20px;
   padding-right: 131px;
+  -webkit-appearance: none;
   appearance: none;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
@@ -493,7 +496,7 @@ body{
   cursor: pointer;
 }
 
-.catalo-card-title{
+.catalog-card-title{
   font-size: 24px;
   font-weight: 700;
   line-height: 28px;
@@ -501,7 +504,7 @@ body{
   margin: 0;
 }
 
-.catalo-card-apartments-type{
+.catalog-card-apartments-type{
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
@@ -509,7 +512,7 @@ body{
   color: #333333;
 }
 
-.catalo-card-price{
+.catalog-card-price{
   font-size: 18px;
   font-weight: 400;
   line-height: 21px;
@@ -517,7 +520,7 @@ body{
   color: #333333;
 }
 
-.catalo-card-raiting{
+.catalog-card-rating{
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -528,11 +531,12 @@ body{
   padding: 9px 0 8px 0;
   border-radius: 4px;
 }
-.catalo-card-image{
+.catalog-card-image{
   object-fit: cover;
 }
 .without-bg{
   background-image: none;
+  background-color: transparent;
   color: black;
 }
 
@@ -572,14 +576,14 @@ body{
 }
 
 .range-min, .range-max{
-    position: absolute;
-    cursor: pointer;
-    background-color: white;
-    width: 20px;
-    height: 20px;
-    border-radius: 5px;
-    border: none;
-    top: 50%;
+  position: absolute;
+  cursor: pointer;
+  background-color: white;
+  width: 20px;
+  height: 20px;
+  border-radius: 5px;
+  border: none;
+  top: 50%;
 
 }
 
@@ -601,7 +605,7 @@ body{
   color: #000;
 }
 
-.catalo-card{
+.catalog-card{
   display: flex;
   flex-direction: column;
   list-style-type: none;
@@ -613,7 +617,7 @@ body{
   gap: 16px;
 }
 
-.catalo-list{
+.catalog-list{
   display: flex;
   flex-wrap: wrap;
   column-gap: 20px;
@@ -840,6 +844,7 @@ body{
   box-sizing: border-box;
   min-width: 160px;
   max-width: 200px;
+  justify-content: center;
 }
 
 .html-academy-link{
@@ -902,13 +907,13 @@ body{
   border-top-left-radius: 0;
 }
 
-.catalo-card-description{
+.catalog-card-description{
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 16px;
   column-gap: 20px;
 }
-.catalo-card-description > .btn{
+.catalog-card-description > .btn{
   padding-left: 0;
   padding-right: 0;
 }
@@ -948,7 +953,7 @@ body{
   background-image: url("../images/gift.svg");
 }
 
-.catalo-card-star{
+.catalog-card-star{
   display: grid;
   grid-template-columns: repeat(4, 22px);
   grid-template-rows: 18px;
@@ -956,7 +961,7 @@ body{
   align-content: center;
 }
 
-.catalo-card-star::before{
+.catalog-card-star::before{
   content: "";
   background-image: url("../images/star.svg");
   background-repeat: space;
@@ -1420,4 +1425,3 @@ body{
   font-size: 18px;
   line-height: 23px;
 }
-
